# primitives

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
context/: README.md
context/specs/: 02-layers.md  03-transitions.md  05-mcp-contract.md
docs/: architecture-decision.md  manifesto.md
docs/brainstorm/: 2026-04-26-agent-harness-split.md  README.md
docs/specs/: cag-queries.md  cag-schema.md  mcp-tools.md
src/primitives/: __init__.py  protocols.py
src/primitives/cag/: __init__.py
src/primitives/cag/agents/: __init__.py  base.py  tools.py
src/primitives/cag/epistemology/: __init__.py  promotion.py  supersession.py
src/primitives/cag/queries/: __init__.py
src/primitives/eag/: __init__.py  lifecycle.py  store.py
src/primitives/eag/agents/: __init__.py  base.py  tools.py
src/primitives/eag/epistemology/: __init__.py  confidence.py  promotion.py
src/primitives/eag/queries/: __init__.py  (+5 more)
src/primitives/epistemology/: __init__.py  confidence.py  promotion.py
src/primitives/extensions/: __init__.py  code.py
src/primitives/queries/: __init__.py
src/primitives/schema/: __init__.py  edges.py  labels.py
src/primitives/scoring/: __init__.py  decay.py
src/primitives/shared/: __init__.py  fingerprints.py  validators.py
src/primitives/signals/: __init__.py  freshness.py  heat.py  priority.py
src/primitives/taxonomy/: __init__.py  categories.py
tests/: test_confidence.py  test_decay.py  test_promotion.py  test_supersession.py
(+4 files in other folders)
